<resources>
    <string name="app_name">FirstLink iCRM</string>
    <string name="loading">Loading&#8230;</string>
    <string name="loading_location">Locate your location in progress&#8230;</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="new_this_week">New This Week</string>
    <string name="modified_this_week">Modified This Week</string>
    <string name="my_contact">My Contacts</string>
    <string name="my_lead">My Leads</string>
    <string name="today_task">Today’s Task </string>
    <string name="today_next_7_day">Today + Next 7 days</string>
    <string name="overdue">Overdue</string>
    <string name="mandatory">Mandatory</string>
    <string name="all_day">All Day</string>
    <string name="company">Company Name</string>
    <string name="unsyn_text">Some data has been updated.Please press button above to sync the data between apps and web</string>
    <string name="date">Date</string>
    <string name="subject">Subject</string>
      <string name="subject_and_location">Subject and Location</string>
    <string name="login">Login</string>
    <string name="activation">Activation</string>
    <string name="activation_login">Activation Login</string>
    <string name="url_setting">URL Settings</string>
    <string name="edit">Edit</string>
    <string name="end_user_agreement">Firstlink iCRM End User License Agreement:</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="mode_selection">Mode Selection</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="cancel">Cancel</string>
    <string name="back_to_exit">Please click BACK again to exit</string>
    <string name="unsync_title">Synchronization Required</string>
    <string name="unsync_desc">We notice you have some unsync info. Please sync.</string>
    <string name="sync_now">Sync Now</string>
    <string name="unlock">Unlock</string>
    <string name="forgot_passcode">Forgot Passcode</string>
    <string name="passcode_error">Passcode Error</string>
    <string name="empty_passcode">Please enter passcode</string>
    <string name="passcode_sent_title">Passcode Sent</string>
    <string name="passcode_sent_desc">We have sent you the passcode to your email address</string>
    <string name="passcode_not_match">Passcode not match. Please try again.</string>
    <string name="agreement"><u>Agreement Terms</u>\nFirstlinkiCRM app is the mobile app of Firstlink CRM On- Demand, a service provides by FirstlinkSdnBhd, a private limited company registered in Malaysia (\"Firstlink\").\n\nBy clicking \'Accept\' and successfully authenticating and using the FirstlinkiCRM(the \"Service\"),You(\"You\" and \"Your\" refers to the individual or entity, and any Affiliates of such an entity) are deemed to agree to be bound by terms and conditions of this Agreement governing the use of the FirstlinkiCRM. If You are an authorised user  ofFirstlink CRM On-Demand services, the Firstlink CRM On Demand Subscription Agreement applies and is legally binding on You. For users who donot subscribe the service of Firstlink CRM On-Demand ,FirstlinkiCRM offers limited functionality under OFFLINE mode.
For authorized Firstlink CRM On-Demand users,  FirstlinkiCRM allows  CRM data to be synchronized between FirstlinkiCRM app and Firstlink CRM Web Server. To enable the synchronization, please ensure your CRM system administrator has granted mobile license to Your login.\n\n1.Permission to access data in your mobile phone\nYou agreed and give permission allowing  FirstlinkiCRM app to access the following information in your Andriod phones :\na.address book (which will syn with Leads/ Contacts in FirstlinkiCRM)\nb.calendar (which will syn with event / task/ calendar in FirstlinkiCRM)\nc.location service (which will enable the Nearby search when FirstlinkiCRM is in ONLINE mode)\n\n2.Services available on ONLINE mode only\nYou acknowledge and understand the following services are available on ONLINE mode only\na.Nearby contacts/ leads search\nb.Announcement\nc.Passcode lock\nd.Data synchronization with Firstlink CRMWeb Server through internet\n\n3.Changing from OFFLINE Mode to ONLINE mode\nYou acknowledge, understand and agree all OFFLINE data will be replaced upon changing to ONLINE mode. OFFLINE mode will be removed upon changing to ONLINE mode.\n\n4.Ownership of Your Data and Data Protection\nFirstlink does not own any data input (in whatever form) made by You. You are solely responsible  for the Data, including, its accuracy, quality, integrity, reliability or completeness. To the extent the Firstlinkis given access to Your DataFirstlink will comply with its privacy and security policies.You are responsible for establishing and maintaining adequate security, virus protection and backup for any of the data residing on the FirstlinkiCRM.\n\n5.Performance\nFirstlink warrants that the Service will be performed in a professional and workmanlike manner by qualified personnel. Firstlink\'s  sole obligation and liability and Your sole and exclusive remedy for breach of this warranty shall be for Firstlink to reperform any Service brought to its attention within thirty (30) days after the Services are performed.\n\n6.Disclaimer.\nExcept as expressly set forth in this clause 5, the services is provided to You \"as is and as available\" basis and Firstlink hereby disclaim any other representations or warranties, express, implied, statutory, or otherwise, regarding the service, including without limitation any implied warranty of merchantability, title, performance, quality, non-infringement, fitness for a particular purpose, and any implied warranties arising from course of dealing or course of performance. the service may be subject to limitations, delays, and other problems inherent in the use of the internet and electronic communications. Firstlink is not responsible for any delays, delivery failures, or other damage resulting from such problems. Firstlink makes no warranty that the availability and functionality of the services, or access to the services via the internet, are or will be uninterrupted, timely, secure, or error free.\n\n7.Indemnification\nYou will defend Firstlink, its officers, directors, employees, suppliers, agents, and assigns against any claims, liabilities, losses, costs or damages, including lawyer\'s fees (\"Claim\"), related to or arising out of:\n(a)Your breach of any term, condition or warranty in this Agreement;\n(b)Your use or installation of any third party\'s software;\n(c)Your unauthorized use of any third party\'s proprietary or confidential intellectual property or information including, but not limited to, patents, copyrights, licensed material or trade secrets; or\n(d)Your use of the Firstlink Services in a manner that contravenes any applicable law or regulation including, but not limited to, Your unauthorized or improper use of any individual\'s personal information in contravention of any applicable privacy laws\n\n8.Limitation of Liability\nNEITHER PARTY WILL BE LIABLE FOR ANY INDIRECT, INCIDENTAL, SPECIAL, PUNITIVE, OR CONSEQUENTIAL DAMAGES, OR ANY LOSS OF REVENUE OR PROFITS (EXCLUDING FEES UNDER THIS AGREEMENT), DATA, OR DATA USE.  FIRSTLINK\'S MAXIMUM LIABILITY FOR ANY DAMAGES ARISING OUT OF OR RELATED TO THIS AGREEMENT, WHETHER IN CONTRACT OR IN TORT, OR OTHERWISE, WILL IN NO EVENT EXCEED, IN THE AGGREGATE, THE TOTAL AMOUNTS ACTUALLY PAID TO FIRSTLINK IN THE TWELVE MONTH PERIOD IMMEDIATELY PRECEDING THE EVENT GIVING RISE TO SUCH CLAIM.\n\n9.Changes\nNotwithstanding anything else to the contrary in this Agreement, Firstlink reserves the right at any time not to release or to discontinue release of any Services , to change its then current list price for the Services and other Firstlink Services and to alter features, specifications, capabilities, functions, licensing terms, release dates, general availability or other characteristics of the Services and other Firstlink Services.\n\n10.Governing Law; Venue.\nThis Agreement is governed exclusively by the laws of Malaysia. The United Nations Convention on Contracts for the International Sale of Goods does not apply to this Agreement. You andFirstlinkirrevocably waive any right each may have to object to the venue of such courts. You and Firstlinkfurther agree that the Court of Malaya will have exclusive jurisdiction over any suit or action initiated by one Party against the other.</string>
    <string name="last_modified_date">Last Modified Date: %s</string>
    <string name="connection_error">Connection Error</string>
    <string name="tnc">T&amp;C</string>
    <string name="activate">Activate</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="mobile_server">Mobile Server</string>
    <string name="web_server">Web Server</string>
    <string name="login_online">Login</string>
    <string name="email_error_title">Invalid Email</string>
    <string name="email_error_msg">Please enter a valid email</string>
    <string name="password_error_title">Invalid Password</string>
    <string name="password_error_msg">Please enter a valid password</string>
    <string name="mobileurl_error_title">Invalid Mobile Url</string>
    <string name="mobileurl_error_msg">Please enter a mobile url</string>
    <string name="weburl_error_title">Invalid Web Url</string>
    <string name="weburl_error_msg">Please enter a web url</string>
    <string name="ok">Ok</string>
    <string name="login_fail_title">Login Failed</string>
    <string name="login_fail_desc">Incorrect email/password combination</string>
    <string name="login_confirmation_title">Login Info Confirmation</string>
    <string name="login_confirmation_desc">Please confirm your login info\n\nEmail:-\n[EMAIL]\n\nI agreed to submit my login data to Firstlink CRM Server</string>
    <string name="email_not_match_title">Email Error</string>
    <string name="email_not_match_msg">The email provided is not matched</string>
    <string name="crm_login">CRM Login</string>
    <string name="connect_crm_server">Connect to CRM Server</string>
    <string name="forgot_passwod">Forgotten CRM Password?</string>
    <string name="answer_error_title">Invalid Answer</string>
    <string name="answer_error_msg">Please enter a valid answer</string>
    <string name="nearby_places">Nearby Places</string>
    <string name="report_synchronization">Report Synchronization</string>
    <string name="username">Username</string>
    <string name="report_sync_note">Please enter CRM login info</string>
    <string name="report_sync_report_date_note">Please select Report Sync date range</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="custom">Custom</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="birthday">Birthday</string>
    <string name="email2">Email 2</string>
    <string name="email3">Email 3</string>
    <string name="skype_id">Skype ID</string>
    <string name="assistant_name">Assistant Name</string>
    <string name="assistant_phone">Assistant Phone</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="country">Country</string>
    <string name="description">Description</string>
    <string name="search_hint">Contact Name, Account or Mobile Number</string>
    <string name="to05km">0 &#8211; 5 KM</string>
    <string name="to510km">5 &#8211; 10 KM</string>
    <string name="to1015km">10 &#8211; 15 KM</string>
    <string name="to1520km">15 &#8211; 20 KM</string>
    <string name="empty_nearby_list">No contact/lead is nearby</string>
</resources>