<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical" >
    
	<TableLayout
		android:id="@+id/others_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
      	
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:textColor="#000" />

           <EditText
               android:id="@+id/birthday"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="#000"
               android:inputType="date"
               android:hint="@string/birthday"
               android:textSize="12sp" />
       </TableRow>
       <TableRow
           android:layout_width="fill_parent"
           android:layout_height="wrap_content">
           <TextView
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:text="@string/email2"
               android:textColor="#000" />

           <EditText
               android:id="@+id/email2"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="#000"
               android:inputType="textEmailAddress"
               android:hint="@string/email2"
               android:textSize="12sp" />
       </TableRow>
       <TableRow
            android:layout_width="fill_parent"
          	android:layout_height="wrap_content">
           <TextView
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:text="@string/email3"
               android:textColor="#000" />

           <EditText
               android:id="@+id/email3"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="#000"
               android:inputType="textEmailAddress"
               android:hint="@string/email3"
               android:textSize="12sp" />
       </TableRow>
       <TableRow
            android:layout_width="fill_parent"
          	android:layout_height="wrap_content">
           <TextView
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:text="@string/skype_id"
               android:textColor="#000" />

           <EditText
               android:id="@+id/skype_id"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="#000"
               android:hint="@string/skype_id"
               android:textSize="12sp" />
       </TableRow>
       <TableRow
            android:layout_width="fill_parent"
          	android:layout_height="wrap_content">
           <TextView
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:text="@string/assistant_name"
               android:textColor="#000" />

           <EditText
               android:id="@+id/assistant_name"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="#000"
               android:hint="@string/assistant_name"
               android:textSize="12sp" />
       </TableRow>
       <TableRow
            android:layout_width="fill_parent"
          	android:layout_height="wrap_content">
           <TextView
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:text="@string/assistant_phone"
               android:textColor="#000" />

           <EditText
               android:id="@+id/assistant_phone"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="#000"
               android:hint="@string/assistant_phone"
               android:textSize="12sp" />
       </TableRow>
       <TableRow
            android:layout_width="fill_parent"
          	android:layout_height="wrap_content">
           <TextView
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:text="@string/street"
               android:textColor="#000" />

           <EditText
               android:id="@+id/street"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="#000"
               android:hint="@string/street"
               android:textSize="12sp" />
       </TableRow>
       <TableRow
            android:layout_width="fill_parent"
          	android:layout_height="wrap_content">
           <TextView
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:text="@string/city"
               android:textColor="#000" />

           <EditText
               android:id="@+id/city"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="#000"
               android:hint="@string/city"
               android:textSize="12sp" />
       </TableRow>
       <TableRow
            android:layout_width="fill_parent"
          	android:layout_height="wrap_content">
           <TextView
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:text="@string/state"
               android:textColor="#000" />

           <EditText
               android:id="@+id/state"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="#000"
               android:hint="@string/state"
               android:textSize="12sp" />
       </TableRow>
       <TableRow
            android:layout_width="fill_parent"
          	android:layout_height="wrap_content">
           <TextView
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:text="@string/zip"
               android:textColor="#000" />

           <EditText
               android:id="@+id/zip"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="#000"
               android:hint="@string/zip"
               android:textSize="12sp" />
       </TableRow>
       <TableRow
            android:layout_width="fill_parent"
          	android:layout_height="wrap_content">
           <TextView
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:text="@string/country"
               android:textColor="#000" />

           <EditText
               android:id="@+id/country"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="#000"
               android:hint="@string/country"
               android:textSize="12sp" />
       </TableRow>
       <TableRow
            android:layout_width="fill_parent"
          	android:layout_height="wrap_content">
           <TextView
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:text="@string/description"
               android:textColor="#000" />

           <EditText
               android:id="@+id/description"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:textColor="#000"
               android:hint="@string/description"
               android:textSize="12sp" />
       </TableRow>
</TableLayout>
</LinearLayout>