<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/main_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
       >

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10dip"
            android:src="@drawable/ic_icon_menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:text="@string/nearby_places"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFF" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#224680"
          android:layout_marginBottom="10dp" />

    <LinearLayout
        android:id="@+id/distance_filter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/km0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/blue_menu_middle"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/to05km"
            android:textColor="#FFF"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/km5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/blue_menu_middle"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/to510km"
            android:textColor="#FFF"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/km10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/blue_menu_middle"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/to1015km"
            android:textColor="#FFF"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/km15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/blue_menu_middle"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/to1520km"
            android:textColor="#FFF"
            android:textSize="12sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="20dip"
        android:background="#00000000"
        android:drawableLeft="@drawable/ic_btn_search"
        android:drawablePadding="5dip"
        android:hint="@string/search_hint"
        android:padding="5dip"
        android:singleLine="true"
        android:textColor="#ffffff"
        android:textColorHint="#A6ABBE"
        android:textSize="10dip" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/search"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="#8998B9" />

    <TextView
        android:id="@+id/empty_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/empty_nearby_list"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/empty_list"
        android:divider="@color/listLine"
        android:dividerHeight="1dip"
        android:footerDividersEnabled="true" />

</LinearLayout>